# rapidspec-kit

./: .markdownlint-cli2.jsonc  .markdownlintrc  .markdownlintrc.json  AGENTS.md  AUTOMATED_RELEASE.md  AUTO_RELEASE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  COMPLETE_RELEASE_AUTOMATION.md  CONTRIBUTING.md  MEMORY_BANK_INTEGRATION.md  Makefile  PERMANENT_RELEASE_SOLUTION.md  README.md  RELEASE_NOTES_v0.0.10.md  RELEASE_NOTES_v0.0.11.md  RELEASE_NOTES_v0.0.12.md  RELEASE_NOTES_v0.0.13.md  RELEASE_NOTES_v0.0.8.md  RELEASE_NOTES_v0.0.9.md  RELEASE_PROCESS.md  SECURITY.md  SUPPORT.md  TOOLS.md  pyproject.toml  spec-driven.md
.devcontainer/: devcontainer.json
.github/workflows/: auto-release.yml  lint.yml  release.yml
docs/: README.md  UV_AUTO_UPDATE.md  index.md  installation.md  local-development.md  memory-bank.md  quickstart.md  upgrade.md
memory/: activeContext.md  constitution.md  decisionLog.md  productContext.md  progress.md  systemPatterns.md
scripts/: bump-version.sh
scripts/bash/: apply-code.sh  archive-feature.sh  check-prerequisites.sh  checkpoint-approval.sh  commit-verify.sh  create-new-feature.sh  detect-changes.sh  generate-pr.sh  interactive-decision.sh  merge-specs.sh  options-phase.sh  research-phase.sh  review-report.sh  setup-plan.sh  show-diff.sh  update-agent-context.sh  validate-archive.sh  verify-code.sh
scripts/powershell/: apply-code.ps1  archive-feature.ps1  check-prerequisites.ps1  checkpoint-approval.ps1  commit-verify.ps1  detect-changes.ps1  (+12 more)
templates/: investigation.md  proposal.md  research.md  spec.md  tasks.md  vscode-settings.json
(+55 files in other folders)
