[project]
name = "rapidspec-cli"
version = "0.0.13"
description = "RapidSpec CLI - Automate spec-driven development with AI agents. A comprehensive toolkit for RapidSpec-Kit projects."
requires-python = ">=3.11"
dependencies = [
    "typer",
    "rich",
    "httpx[socks]",
    "platformdirs",
    "readchar",
    "truststore>=0.10.4",
]

[project.scripts]
rapidspec = "specify_cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/specify_cli"]

